Fix extra padding and margin in qr code component

--- a/projects/08-qr-code/style.css
+++ b/projects/08-qr-code/style.css
@@ -7,14 +7,15 @@
 }
 
 body {
-  font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
-    "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
+    "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   background-color: hsl(212, 45%, 89%);
   display: flex;
   align-items: center;
   justify-content: center;
   height: 100vh;
+  padding: 0px;
+  margin: 0px;
 }
 
 #panel {
